[package]
name = "codechain"
version = "0.1.0"
license = "AGPL-3.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
app_dirs = "^1.2.1"
clap = { version = "2", features = ["yaml"] }
codechain-core = { path = "core" }
codechain-discovery = { path = "discovery" }
codechain-finally = { path = "util/finally" }
codechain-logger = { path = "logger" }
codechain-network = { path = "network" }
codechain-reactor = { path = "util/reactor" }
codechain-rpc = { path = "rpc" }
codechain-sync = { path = "sync" }
codechain-types = { path = "primitives/codechain-types" }
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
fdlimit = "0.1"
futures = "0.1"
log = "0.4.1"
env_logger = "0.5.3"
panic_hook = { path = "util/panic_hook" }
parking_lot = "0.5"
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1.6"
toml = "0.4"

[[bin]]
path = "codechain/main.rs"
name = "codechain"

[workspace]
members = [
	"core",
	"crypto",
	"discovery",
	"json",
	"keys",
	"logger",
	"network",
	"rpc",
	"rpc_cli",
	"rpc_client",
	"sync"
]
