[package]
name = "codechain"
version = "0.1.0"
license = "AGPL-3.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]
exclude = [
    "db/*",
    "docker/*",
    "docs/*",
    "keys/*",
    "scripts/*",
    "spec/*",
    "test/*",
]

[dependencies]
app_dirs = "^1.2.1"
clap = { version = "2", features = ["yaml"] }
codechain-core = { path = "core" }
codechain-discovery = { path = "discovery" }
codechain-logger = { path = "util/logger" }
codechain-key = { path = "key" }
codechain-keystore = { path = "keystore" }
codechain-merkle = { path = "util/merkle" }
codechain-network = { path = "network" }
codechain-reactor = { path = "util/reactor" }
codechain-rpc = { path = "rpc" }
codechain-state = { path = "state" }
codechain-sync = { path = "sync" }
codechain-timer = { path = "util/timer" }
codechain-types = { path = "types" }
codechain-vm = { path = "vm" }
codechain-stratum = { path = "stratum" }
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
fdlimit = "0.1"
finally = { git = "https://github.com/CodeChain-io/rust-finally.git" }
futures = "0.1"
log = "0.4.6"
env_logger = "0.5.3"
never = { git = "https://github.com/CodeChain-io/rust-never.git" }
panic_hook = { path = "util/panic_hook" }
parking_lot = "0.6.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rpassword = "2.0.0"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1.17"
toml = "0.4"

[build-dependencies]
vergen = "2"

[[bin]]
path = "codechain/main.rs"
name = "codechain"

[workspace]
members = [
    "core",
    "crypto",
    "discovery",
    "json",
    "key",
    "keystore",
    "network",
    "rpc",
    "sync",
    "types",
    "vm",
]
