[package]
name = "consensus"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
codechain-bytes = { path = "../util/bytes" }
codechain-io = { path = "../util/io" }
codechain-types = { path = "../primitives/codechain-types" }
codechain-crypto = { path = "../crypto" }
heapsize = "0.4"
log = "0.3"
keys = { path="../keys" }
parking_lot = "0.5"
time = "0.1"
rlp = { path = "../util/rlp" }
