[package]
name = "consensus"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
codechain-bytes = { path = "../util/bytes" }
codechain-crypto = { path = "../crypto" }
codechain-io = { path = "../util/io" }
codechain-keys = { path="../keys" }
codechain-types = { path = "../primitives/codechain-types" }
heapsize = "0.4"
log = "0.3"
parking_lot = "0.5"
rlp = { path = "../util/rlp" }
time = "0.1"
triehash = { path = "../util/triehash" }
