[package]
name = "codechain-core"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]

[dependencies]
codechain-crypto = { path = "../crypto" }
codechain-io = { path = "../util/io" }
codechain-json = { path = "../json" }
codechain-key = { path = "../key" }
codechain-keystore = { path="../keystore" }
codechain-logger = { path = "../util/logger" }
codechain-merkle = { path = "../util/merkle" }
codechain-network = { path = "../network" }
codechain-state = { path = "../state" }
codechain-timer = { path = "../util/timer" }
codechain-types = { path = "../types" }
codechain-stratum = { path = "../stratum" }
codechain-vm = { path = "../vm" }
crossbeam-channel = "0.3"
cuckoo = { git = "https://github.com/CodeChain-io/rust-cuckoo.git", rev = "280cab9c" }
hashdb = { path = "../util/hashdb" }
hyper = { git = "https://github.com/paritytech/hyper", default-features = false }
journaldb = { path = "../util/journaldb" }
linked-hash-map = "0.5"
log = "0.4.6"
lru-cache = "0.1.2"
kvdb = { path = "../util/kvdb" }
kvdb-rocksdb = { path = "../util/kvdb-rocksdb" }
kvdb-memorydb = { path = "../util/kvdb-memorydb" }
memorydb = { path = "../util/memorydb" }
num-rational = "0.2.1"
parking_lot = "0.6.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rand = "0.6.1"
rlp = { path = "../util/rlp" }
rlp_compress = { path = "../util/rlp_compress" }
rlp_derive = { path = "../util/rlp_derive" }
snap = "0.2"
table = { path = "../util/table" }
util-error = { path = "../util/error" }

[dev-dependencies]
rand_xorshift = "0.1.0"

[features]
nightly = []
