[package]
name = "codechain-core"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.1" }
codechain-db = { path = "../util/db" }
codechain-io = { path = "../util/io" }
codechain-json = { path = "../json" }
codechain-key = { path = "../key" }
codechain-keystore = { path="../keystore" }
codechain-logger = { path = "../util/logger" }
codechain-merkle = { path = "../util/merkle" }
codechain-network = { path = "../network" }
codechain-state = { path = "../state" }
codechain-timer = { path = "../util/timer" }
codechain-types = { path = "../types" }
codechain-stratum = { path = "../stratum" }
codechain-vm = { path = "../vm" }
crossbeam-channel = "0.3"
cuckoo = { git = "https://github.com/CodeChain-io/rust-cuckoo.git", rev = "280cab9c" }
hyper = { git = "https://github.com/paritytech/hyper", default-features = false }
kvdb = "0.1"
kvdb-rocksdb = "0.1"
kvdb-memorydb = "0.1"
linked-hash-map = "0.5"
log = "0.4.6"
lru-cache = "0.1.2"
num-rational = "0.2.1"
parking_lot = "0.6.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rand = "0.6.1"
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
rlp_compress = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.2" }
rlp_derive = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.2" }
snap = "0.2"
table = { path = "../util/table" }
util-error = { path = "../util/error" }

[dev-dependencies]
rand_xorshift = "0.1.0"

[features]
nightly = []
