[package]
name = "codechain-crypto"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
ring = "0.12"
quick-error = "1.2"
rust-crypto = "0.2.36"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }

[dev-dependencies]
rand = "0.6.1"
