[package]
name = "codechain-discovery"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
codechain-crypto = { path = "../crypto" }
codechain-key = { path = "../key" }
codechain-logger = { path = "../util/logger" }
codechain-network = { path = "../network" }
codechain-timer = { path = "../util/timer" }
log = "0.4.6"
parking_lot = "0.6.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git" }
rand = "0.6.1"
rlp = { path = "../util/rlp" }
time = "0.1"

[dev-dependencies]
lazy_static = "1.2"
