[package]
name = "codechain-discovery"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
codechain-key = { path = "../key" }
codechain-logger = { path = "../util/logger" }
codechain-network = { path = "../network" }
codechain-timer = { path = "../util/timer" }
log = "0.4.6"
never-type = "0.1.0"
parking_lot = "0.11.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rand = "0.6.1"
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
time = "0.1"

[dev-dependencies]
lazy_static = "1.2"
