[package]
name = "codechain-key"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>", "CodeChain Team <codechain@kodebox.io>"]

[dependencies]
rand = "0.6.1"
rustc-hex = "1.0"
rustc-serialize = "0.3"
lazy_static = "1.2"
bech32 = "0.2.2"
codechain-crypto = { path = "../crypto" }
never = { git = "https://github.com/CodeChain-io/rust-never.git" }
parking_lot = "0.6.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git" }
rand_xorshift = "0.1.0"
rlp = { path = "../util/rlp" }
secp256k1 = { path = "../util/secp256k1" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
