[package]
name = "codechain-keystore"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>", "Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.4.1"
libc = "0.2"
rand = "0.5.3"
codechain-key = { path = "../key", features = ["ecdsa"] }
codechain-types = { path = "../primitives/codechain-types" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "1.0"
time = "0.1.34"
itertools = "0.5"
parking_lot = "0.5"
codechain-crypto = { path = "../crypto" }
smallvec = "0.4"
tempdir = "0.3"

[dev-dependencies]
matches = "0.1"

[lib]
