[package]
name = "codechain-keystore"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>", "Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.6"
libc = "0.2"
rand = "0.6.1"
codechain-json = { path = "../json" }
codechain-key = { path = "../key" }
codechain-types = { path = "../types" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "1.0"
time = "0.1.34"
parking_lot = "0.6.0"
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.1" }
smallvec = "0.4"
tempdir = "0.3"
vrf = { git = "https://github.com/CodeChain-io/vrf-rs.git" }

[dev-dependencies]
matches = "0.1"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }

[lib]
