[package]
name = "codechain-network"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
codechain-crypto = { path = "../crypto" }
codechain-io = { path = "../util/io" }
codechain-key = { path = "../key" }
codechain-logger = { path = "../util/logger" }
codechain-timer = { path = "../util/timer" }
codechain-types = { path = "../types" }
finally = { git = "https://github.com/CodeChain-io/rust-finally.git" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git" }
limited-table = { git = "https://github.com/CodeChain-io/rust-limited-table.git" }
log = "0.4.6"
mio = "0.6.16"
parking_lot = "0.6.0"
rand = "0.6.1"
rlp = { path = "../util/rlp" }
rlp_derive = { path = "../util/rlp_derive" }
table = { path = "../util/table" }
time = "0.1"
token-generator = { git = "https://github.com/CodeChain-io/rust-token-generator.git" }
