[package]
name = "codechain-network"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]

[dependencies]
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.1" }
codechain-io = { path = "../util/io" }
codechain-key = { path = "../key" }
codechain-logger = { path = "../util/logger" }
codechain-timer = { path = "../util/timer" }
codechain-types = { path = "../types" }
crossbeam-channel = "0.3"
finally-block = "0.1"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
log = "0.4.6"
mio = "0.6.16"
never-type = "0.1.0"
parking_lot = "0.6.0"
rand = "0.6.1"
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
rlp_derive = { path = "../util/rlp_derive" }
table = { path = "../util/table" }
time = "0.1"
token-generator = "0.1.0"
cidr = "0.0.4"
