[package]
name = "codechain-rpc"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[lib]

[dependencies]
codechain-core = { path = "../core" }
codechain-json = { path = "../json" }
codechain-key = { path = "../key" }
codechain-keystore = { path = "../keystore" }
codechain-logger = { path = "../util/logger" }
codechain-network = { path = "../network" }
codechain-state = { path = "../state" }
codechain-sync = { path = "../sync" }
codechain-types = { path = "../types" }
kvdb = { path = "../util/kvdb" }
kvdb-rocksdb = { path = "../util/kvdb-rocksdb" }
lazy_static = "1.1.0"
log = "0.4.1"
parking_lot = "0.5"
primitives = { path = "../util/primitives" }
rlp = { path = "../util/rlp" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "1.0"
rustc-serialize = "0.3"
tokio-core = "0.1.1"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-macros = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-ipc-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-ws-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
