[package]
name = "codechain-rpc"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[lib]

[dependencies]
cidr = "0.0.4"
codechain-core = { path = "../core" }
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.1" }
codechain-json = { path = "../json" }
codechain-key = { path = "../key" }
codechain-keystore = { path = "../keystore" }
codechain-logger = { path = "../util/logger" }
codechain-network = { path = "../network" }
codechain-state = { path = "../state" }
codechain-sync = { path = "../sync" }
codechain-types = { path = "../types" }
codechain-vm = { path = "../vm" }
kvdb = "0.1"
kvdb-rocksdb = "0.1"
lazy_static = "1.2"
log = "0.4.6"
parking_lot = "0.6.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6.1"
rustc-hex = "1.0"
rustc-serialize = "0.3"
time = "0.1"
tokio-core = "0.1.17"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", tag = "v14.0.3" }
jsonrpc-derive = { git = "https://github.com/paritytech/jsonrpc.git", tag = "v14.0.3" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc.git", tag = "v14.0.3" }
jsonrpc-ipc-server = { git = "https://github.com/paritytech/jsonrpc.git", tag = "v14.0.3" }
jsonrpc-ws-server = { git = "https://github.com/paritytech/jsonrpc.git", tag = "v14.0.3" }
