[package]
name = "codechain-rpc-cli"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
clap = { version = "2", features = ["yaml"] }
codechain-bytes = { path = "../util/bytes" }
codechain-core = { path = "../core" }
codechain-crypto = { path = "../crypto" }
codechain-keys = { path = "../keys" }
codechain-rpc-client = { path = "../rpc_client" }
codechain-types = { path = "../primitives/codechain-types" }
rlp = { path = "../util/rlp" }
serde_json = "1.0"
