[package]
name = "codechain-rpc-client"
version = "0.1.0"
license = "AGPL-3.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]
description = "CodeChain RPC Client"

[dependencies]
codechain-bytes = { path = "../util/bytes" }
codechain-core = { path = "../core" }
codechain-rpc = { path = "../rpc" }
codechain-types = { path = "../primitives/codechain-types"}
rlp = { path = "../util/rlp" }
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
jsonrpc-core = { git = "https://github.com/ethcore/jsonrpc.git" }
jsonrpc-http-server = { git = "https://github.com/ethcore/jsonrpc.git" }
