[package]
name = "codechain-state"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
codechain-crypto = { path = "../crypto" }
codechain-logger = { path = "../util/logger" }
codechain-merkle = { path = "../util/merkle" }
codechain-key = { path = "../key" }
codechain-types = { path = "../types" }
codechain-vm = { path = "../vm" }
hashdb = { path = "../util/hashdb" }
journaldb = { path = "../util/journaldb" }
kvdb = { path = "../util/kvdb" }
kvdb-memorydb = { path = "../util/kvdb-memorydb" }
log = "0.4.6"
lru-cache = "0.1.1"
parking_lot = "0.6.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git" }
rlp = { path = "../util/rlp" }
rlp_derive = { path = "../util/rlp_derive" }
rustc-hex = "1.0"
util-error = { path = "../util/error" }
