[package]
name = "codechain-state"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.1" }
codechain-db = { git = "https://github.com/CodeChain-io/rust-codechain-db.git", version = "0.1" }
codechain-logger = { path = "../util/logger" }
codechain-merkle = { path = "../util/merkle" }
codechain-key = { path = "../key" }
codechain-types = { path = "../types" }
codechain-vm = { path = "../vm" }
kvdb = "0.1"
kvdb-memorydb = "0.1"
log = "0.4.6"
lru-cache = "0.1.1"
parking_lot = "0.6.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
rlp_derive = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.2" }
rustc-hex = "1.0"
