[package]
description = "CodeChain stratum lib"
name = "codechain-stratum"
version = "1.11.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>", "CodeChain Team <codechain@kodebox.io>"]

[dependencies]
codechain-crypto = { path = "../crypto" }
codechain-logger = { path = "../util/logger" }
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-macros = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
jsonrpc-tcp-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-1.11" }
log = "0.4.1"
parking_lot = "0.5"
primitives = { path = "../util/primitives" }

[dev-dependencies]
env_logger = "0.4"
tokio-core = "0.1"
tokio-io = "0.1"
