[package]
description = "CodeChain stratum lib"
name = "codechain-stratum"
version = "1.11.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>", "CodeChain Team <hi@codechain.io>"]

[dependencies]
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.1" }
codechain-logger = { path = "../util/logger" }
codechain-json = { path = "../json" }
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", rev = "d1993a8" }
jsonrpc-derive = { git = "https://github.com/paritytech/jsonrpc.git", rev = "d1993a8" }
jsonrpc-tcp-server = { git = "https://github.com/paritytech/jsonrpc.git", rev = "d1993a8" }
log = "0.4.6"
parking_lot = "0.6.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }

[dev-dependencies]
env_logger = "0.6.0"
tokio-core = "0.1.17"
tokio-io = "0.1.10"
