[package]
name = "codechain-sync"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[lib]

[dependencies]
codechain-core = { path = "../core" }
codechain-key = { path = "../key" }
codechain-logger = { path = "../util/logger" }
codechain-merkle = { path = "../util/merkle" }
codechain-network = { path = "../network" }
codechain-state = { path = "../state" }
codechain-timer = { path = "../util/timer" }
codechain-types = { path = "../types" }
journaldb = { path = "../util/journaldb" }
kvdb = { path = "../util/kvdb" }
log = "0.4.6"
parking_lot = "0.6.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git" }
rand = "0.6.1"
rlp = { path = "../util/rlp" }
snap = "0.2"
time = "0.1"
token-generator = { git = "https://github.com/CodeChain-io/rust-token-generator.git" }
util-error = { path = "../util/error" }

[dev-dependencies]
hashdb = { path = "../util/hashdb" }
kvdb-memorydb = { path = "../util/kvdb-memorydb" }
tempfile = "3.0.4"
trie-standardmap = { path = "../util/trie-standardmap" }
