[package]
name = "codechain-sync"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[lib]

[dependencies]
codechain-core = { path = "../core" }
codechain-db = { path = "../util/db" }
codechain-key = { path = "../key" }
codechain-logger = { path = "../util/logger" }
codechain-merkle = { path = "../util/merkle" }
codechain-network = { path = "../network" }
codechain-state = { path = "../state" }
codechain-timer = { path = "../util/timer" }
codechain-types = { path = "../types" }
kvdb = "0.1"
log = "0.4.6"
never-type = "0.1.0"
parking_lot = "0.6.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rand = "0.6.1"
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
snap = "0.2"
time = "0.1"
token-generator = "0.1.0"

[dev-dependencies]
kvdb-memorydb = "0.1"
tempfile = "3.0.4"
trie-standardmap = { path = "../util/trie-standardmap" }
