[package]
name = "codechain-sync"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[lib]

[dependencies]
codechain-core = { path = "../core" }
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
codechain-db = { git = "https://github.com/CodeChain-io/rust-codechain-db.git", version = "0.2" }
codechain-key = { path = "../key" }
codechain-logger = { path = "../util/logger" }
codechain-network = { path = "../network" }
codechain-state = { path = "../state" }
codechain-timer = { path = "../util/timer" }
codechain-types = { path = "../types" }
kvdb = "0.1"
log = "0.4.6"
merkle-trie = { git = "https://github.com/CodeChain-io/rust-merkle-trie.git", version = "0.4" }
never-type = "0.1.0"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rand = "0.6.1"
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
snap = "0.2"
token-generator = "0.1.0"

[dev-dependencies]
kvdb-memorydb = "0.1"
tempfile = "3.0.4"
trie-standardmap = { git = "https://github.com/CodeChain-io/trie-standardmap.git", version = "0.3" }
