[package]
name = "codechain-types"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
byteorder = "1.2.7"
codechain-crypto = { path = "../crypto" }
codechain-key = { path = "../key" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git" }
rlp = { path = "../util/rlp" }
rlp_derive = { path = "../util/rlp_derive" }
serde = "1.0"
serde_derive = "1.0"
