[package]
name = "codechain-types"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]

[dependencies]
codechain-crypto = { path = "../crypto" }
codechain-json = { path = "../json" }
codechain-key = { path = "../key" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rlp = { path = "../util/rlp" }
rlp_derive = { path = "../util/rlp_derive" }
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_json = "1.0"
