[package]
name = "codechain-types"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
codechain-crypto = { git = "https://github.com/CodeChain-io/rust-codechain-crypto.git", version = "0.2" }
codechain-json = { path = "../json" }
codechain-key = { path = "../key" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
rlp_derive = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.2" }
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_json = "1.0"
