[package]
name = "codechain-vm"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[lib]

[dependencies]
byteorder = "1.2.3"
codechain-crypto = { path = "../crypto" }
codechain-key = { path = "../key" }
codechain-types = { path = "../types" }
primitives = { path = "../util/primitives" }
rlp = { path = "../util/rlp" }

[dev-dependencies]
secp256k1 = { path = "../util/secp256k1" }
