[package]
name = "codechain-vm"
version = "0.1.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[lib]

[dependencies]
codechain-crypto = { path = "../crypto" }
codechain-key = { path = "../key" }
codechain-types = { path = "../types" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rlp = { path = "../util/rlp" }

[dev-dependencies]
secp256k1 = { path = "../util/secp256k1" }
