[package]
name = "codechain-types"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
homepage = "https://github.com/paritytech/primitives"
description = "CodeChain types"

[build-dependencies]
rustc_version = "0.2"

[dependencies]
ethcore-bytes = "0.1.1"
ethereum-types = "0.3"
crunchy = "0.1.5"
serde = { version = "1.0", optional = true }
