[package]
name = "util-error"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
kvdb = { path = "../kvdb" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
error-chain = { version = "0.12", default-features = false }
rlp = { git = "https://github.com/CodeChain-io/rlp.git", version = "0.4" }
rustc-hex = "1.0"
