[package]
name = "hashdb"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>", "CodeChain Team <hi@codechain.io>"]
description = "trait for hash-keyed databases."
license = "GPL-3.0"

[dependencies]
elastic-array = "0.10"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
codechain-types = { path = "../../types" }
