[package]
description = "CodeChain IO library"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "codechain-io"
version = "1.9.0"
authors = ["Parity Technologies <admin@parity.io>", "CodeChain Team <codechain@kodebox.io>"]

[dependencies]
codechain-limited-table = { path = "../limited_table" }
codechain-logger = { path = "../logger" }
mio = "0.6.16"
crossbeam = "0.5.0"
parking_lot = "0.6.0"
log = "0.4.6"
